# demo-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  c_identifier_find_server.py  docker-entrypoint.sh  plan.md  pyproject.toml  run.sh  server.py
lib/: __init__.py  registry.py
tools/: .registry.json  __init__.py
tools/basic/: README.md  __init__.py  __register__.py  requirements.txt
tools/c_identifier_find/: README.md  __init__.py  __register__.py  client.py  config.json  formatter.py  requirements.txt
tools/file_tools/: README.md  __init__.py  __register__.py  requirements.txt
tools/install_deps/: README.md  __init__.py  __register__.py  install-deps.py  requirements.txt
tools/math_tools/: README.md  __init__.py  __register__.py  requirements.txt
tools/prompts/: README.md  __init__.py  __register__.py  requirements.txt
tools/resources/: README.md  __init__.py  __register__.py  requirements.txt
tools/time_tools/: README.md  __init__.py  __register__.py  requirements.txt
tools_server/c_identifier_find/: README.md  config.json  requirements.txt  scanner.py  server.py  watcher.py
tools_server/c_identifier_find/storage/: __init__.py  memory.py  sqlite.py
