[project]
name = "demo-mcp-server"
version = "0.1.0"
description = "一个用于连接 Cline 的最小 MCP server 示例（Python 实现）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
demo-mcp-server = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
